--- a/Rubrics.General/Rubrics.General.csproj
+++ b/Rubrics.General/Rubrics.General.csproj
@@ -1,7 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Westwind.AspnetCore.LiveReload" Version="0.1.12" />
+  </ItemGroup>
 
 </Project>
